feat: Migrate from PostgreSQL to XML storage and add broadcast update functionality
- Migration from PostgreSQL to XML file storage system
- Add XmlStorageService for data persistence using JAXB
- Remove JPA repositories and dependencies
- Add LocalDateTimeAdapter for XML serialization
- Add broadcast update functionality:
  - yayınYonGuncelle: Updates broadcast direction
  - yayınGenlikGuncelle: Updates broadcast amplitude
- Enhanced ActivityLogs with message type filtering
- Add broadcast update logic in FormStorageService
- Update frontend ActivityLogs to filter by message types
- Add XML data files for testing
- Remove PostgreSQL dependencies from pom.xml