@@ -1,46 +1,39 @@
 package com.formapp.backend.service;
 
-import com.formapp.backend.model.FormSubmission;
-import com.formapp.backend.model.Scenario;
-import com.formapp.backend.model.ActivityLog;
-import com.formapp.backend.model.Broadcast;
-import com.formapp.backend.model.Message;
-import com.formapp.backend.repository.ActivityLogRepository;
-import com.formapp.backend.repository.BroadcastRepository;
-import com.formapp.backend.repository.ScenarioRepository;
-import com.formapp.backend.repository.MessageRepository;
+import com.formapp.backend.model.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.annotation.PostConstruct;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.Optional;
+import java.util.stream.Collectors;
+import java.math.BigDecimal;
 
 @Service
 public class FormStorageService {
     
     private final ConcurrentHashMap<String, FormSubmission> formStorage = new ConcurrentHashMap<>();
     private final ConcurrentHashMap<String, ActivityLog> activityLogStorage = new ConcurrentHashMap<>();
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Autowired
-    private BroadcastRepository broadcastRepository;
-    
-    @Autowired
-    private ActivityLogRepository activityLogRepository;
-    
-    @Autowired
-    private ScenarioRepository scenarioRepository;
-    
-    @Autowired
-    private MessageRepository messageRepository;
-    
-    private final ObjectMapper objectMapper = new ObjectMapper();
+    private XmlStorageService xmlStorageService;
+
+    private List<Broadcast> broadcasts;
+    private List<Message> messages;
+    private List<Scenario> scenarios;
+    private List<ActivityLog> activityLogs;
+
+    public FormStorageService(XmlStorageService xmlStorageService) {
+        this.xmlStorageService = xmlStorageService;
+        this.broadcasts = xmlStorageService.loadBroadcasts();
+        this.messages = xmlStorageService.loadMessages();
+        this.scenarios = xmlStorageService.loadScenarios();
+        this.activityLogs = xmlStorageService.loadActivityLogs();
+    }
 
     public FormSubmission saveForm(String formType, Object formData) {
         String id = UUID.randomUUID().toString();
@@ -112,6 +105,10 @@ public class FormStorageService {
 
     // Scenario methods
     public Scenario saveScenario(Scenario scenario) {
+        if (scenario.getId() == null) {
+            scenario.setId(UUID.randomUUID().toString());
+        }
+        
         // Get current broadcast values to set as initial values
         FormSubmission broadcastForm = getFormById(scenario.getBroadcastId());
         if (broadcastForm != null) {
@@ -123,6 +120,9 @@ public class FormStorageService {
         scenario.setStartTime(System.currentTimeMillis());
         scenario.setIsActive(true);
         
+        scenarios.add(scenario);
+        xmlStorageService.saveScenarios(scenarios);
+        
         // Log the activity
         Map<String, Object> scenarioData = new HashMap<>();
         scenarioData.put("broadcastId", scenario.getBroadcastId());
@@ -133,44 +133,59 @@ public class FormStorageService {
         scenarioData.put("duration", scenario.getDuration());
         scenarioData.put("updateFrequency", scenario.getUpdateFrequency());
         
-        logActivity("CREATE", "SCENARIO", scenario.getId().toString(), "Yeni senaryo oluşturuldu", scenarioData);
+        logActivity("CREATE", "SCENARIO", scenario.getId(), "Yeni senaryo oluşturuldu", scenarioData);
         
-        return scenarioRepository.save(scenario);
+        return scenario;
     }
 
-    public Scenario getScenarioById(Long id) {
-        return scenarioRepository.findById(id).orElse(null);
+    public Scenario getScenarioById(String id) {
+        return scenarios.stream()
+                .filter(s -> s.getId().equals(id))
+                .findFirst()
+                .orElse(null);
     }
 
     public Scenario getScenarioByBroadcastId(String broadcastId) {
-        return scenarioRepository.findByBroadcastIdAndIsActiveTrue(broadcastId).orElse(null);
+        return scenarios.stream()
+                .filter(s -> s.getBroadcastId().equals(broadcastId) && s.getIsActive())
+                .findFirst()
+                .orElse(null);
     }
 
     public List<Scenario> getAllScenarios() {
-        return scenarioRepository.findAll();
+        return new ArrayList<>(scenarios);
     }
 
-    public void deleteScenario(Long id) {
-        Optional<Scenario> scenarioOpt = scenarioRepository.findById(id);
+    public void deleteScenario(String id) {
+        Optional<Scenario> scenarioOpt = scenarios.stream()
+                .filter(s -> s.getId().equals(id))
+                .findFirst();
+                
         if (scenarioOpt.isPresent()) {
             Scenario scenario = scenarioOpt.get();
+            scenarios.remove(scenario);
+            xmlStorageService.saveScenarios(scenarios);
+            
             Map<String, Object> scenarioData = new HashMap<>();
             scenarioData.put("broadcastId", scenario.getBroadcastId());
             scenarioData.put("finalAmplitude", scenario.getFinalAmplitude());
             scenarioData.put("finalDirection", scenario.getFinalDirection());
             scenarioData.put("duration", scenario.getDuration());
             
-            logActivity("DELETE", "SCENARIO", id.toString(), "Senaryo silindi", scenarioData);
-            
-            scenarioRepository.deleteById(id);
+            logActivity("DELETE", "SCENARIO", id, "Senaryo silindi", scenarioData);
         }
     }
 
-    public Scenario updateScenario(Long id, Scenario scenario) {
-        if (scenarioRepository.existsById(id)) {
-            scenario.setId(id);
+    public Scenario updateScenario(String id, Scenario scenario) {
+        Optional<Scenario> existingScenario = scenarios.stream()
+                .filter(s -> s.getId().equals(id))
+                .findFirst();
+                
+        if (existingScenario.isPresent()) {
+            scenarios.remove(existingScenario.get());
+            scenarios.add(scenario);
+            xmlStorageService.saveScenarios(scenarios);
             
-            // Log the activity
             Map<String, Object> scenarioData = new HashMap<>();
             scenarioData.put("broadcastId", scenario.getBroadcastId());
             scenarioData.put("finalAmplitude", scenario.getFinalAmplitude());
@@ -178,16 +193,15 @@ public class FormStorageService {
             scenarioData.put("duration", scenario.getDuration());
             scenarioData.put("updateFrequency", scenario.getUpdateFrequency());
             
-            logActivity("UPDATE", "SCENARIO", id.toString(), "Senaryo güncellendi", scenarioData);
+            logActivity("UPDATE", "SCENARIO", id, "Senaryo güncellendi", scenarioData);
             
-            return scenarioRepository.save(scenario);
+            return scenario;
         }
         return null;
     }
 
     public List<FormSubmission> getAllForms() {
         List<FormSubmission> forms = new ArrayList<>(formStorage.values());
-        // Sort by submission time (newest first)
         forms.sort((a, b) -> b.getSubmittedAt().compareTo(a.getSubmittedAt()));
         return forms;
     }
@@ -199,7 +213,6 @@ public class FormStorageService {
     public void deleteForm(String id) {
         FormSubmission submission = formStorage.get(id);
         if (submission != null) {
-            // Log the activity before deletion
             logActivity("DELETE", "BROADCAST", id, "Yayın silindi", convertToMap(submission.getFormData()));
             formStorage.remove(id);
         }
@@ -213,7 +226,7 @@ public class FormStorageService {
         return formStorage.values().stream()
                 .filter(form -> form.getFormType().equals(formType))
                 .sorted((a, b) -> b.getSubmittedAt().compareTo(a.getSubmittedAt()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // Activity Log methods
@@ -221,18 +234,19 @@ public class FormStorageService {
         String logId = UUID.randomUUID().toString();
         ActivityLog log = new ActivityLog(action, entityType, entityId, description, entityData);
         log.setId(logId);
-        activityLogStorage.put(logId, log);
+        activityLogs.add(log);
+        xmlStorageService.saveActivityLogs(activityLogs);
     }
 
     public List<ActivityLog> getAllActivityLogs() {
-        List<ActivityLog> logs = new ArrayList<>(activityLogStorage.values());
-        // Sort by timestamp (newest first)
-        logs.sort((a, b) -> b.getTimestamp().compareTo(a.getTimestamp()));
-        return logs;
+        return new ArrayList<>(activityLogs);
     }
 
     public ActivityLog getActivityLogById(String id) {
-        return activityLogStorage.get(id);
+        return activityLogs.stream()
+                .filter(log -> log.getId().equals(id))
+                .findFirst()
+                .orElse(null);
     }
 
     private Map<String, Object> convertToMap(Object obj) {
@@ -242,7 +256,6 @@ public class FormStorageService {
         
         Map<String, Object> map = new HashMap<>();
         
-        // Handle Broadcast objects specifically
         if (obj instanceof Broadcast) {
             Broadcast broadcast = (Broadcast) obj;
             map.put("id", broadcast.getId());
@@ -256,41 +269,41 @@ public class FormStorageService {
             return map;
         }
         
-        // Fallback for other objects
         map.put("data", obj.toString());
         return map;
     }
 
-    public List<FormSubmission> getFormSubmissions() {
-        return new ArrayList<>(); // Not implemented yet
-    }
-
     public List<Broadcast> getBroadcasts() {
-        return broadcastRepository.findAll();
+        return new ArrayList<>(broadcasts);
     }
 
     public List<ActivityLog> getActivityLogs() {
-        return activityLogRepository.findAll();
+        return new ArrayList<>(activityLogs);
     }
 
     public Broadcast saveBroadcast(Broadcast broadcast) {
         if (broadcast.getId() == null) {
             broadcast.setId(UUID.randomUUID().toString());
         }
-        return broadcastRepository.save(broadcast);
+        broadcasts.add(broadcast);
+        xmlStorageService.saveBroadcasts(broadcasts);
+        return broadcast;
     }
 
     public void deleteBroadcast(String id) {
-        broadcastRepository.deleteById(id);
+        broadcasts.removeIf(b -> b.getId().equals(id));
+        xmlStorageService.saveBroadcasts(broadcasts);
     }
 
     public Optional<Broadcast> getBroadcastById(String id) {
-        return broadcastRepository.findById(id);
+        return broadcasts.stream()
+                .filter(b -> b.getId().equals(id))
+                .findFirst();
     }
 
     public List<Broadcast> getBroadcastsByType(String type) {
         if ("Broadcast".equals(type)) {
-            return broadcastRepository.findAll();
+            return new ArrayList<>(broadcasts);
         }
         return new ArrayList<>();
     }
@@ -299,88 +312,208 @@ public class FormStorageService {
         if (log.getId() == null) {
             log.setId(UUID.randomUUID().toString());
         }
-        activityLogRepository.save(log);
+        activityLogs.add(log);
+        xmlStorageService.saveActivityLogs(activityLogs);
     }
 
     public void updateBroadcastStatus(String id, boolean active) {
-        broadcastRepository.findById(id).ifPresent(broadcast -> {
-            broadcast.setActive(active);
-            broadcastRepository.save(broadcast);
-        });
+        broadcasts.stream()
+                .filter(b -> b.getId().equals(id))
+                .findFirst()
+                .ifPresent(broadcast -> {
+                    broadcast.setActive(active);
+                    xmlStorageService.saveBroadcasts(broadcasts);
+                });
     }
 
     public void updateBroadcastTcpStatus(String id, boolean tcpSent) {
-        broadcastRepository.findById(id).ifPresent(broadcast -> {
-            broadcast.setTcpSent(tcpSent);
-            broadcastRepository.save(broadcast);
-        });
+        broadcasts.stream()
+                .filter(b -> b.getId().equals(id))
+                .findFirst()
+                .ifPresent(broadcast -> {
+                    broadcast.setTcpSent(tcpSent);
+                    xmlStorageService.saveBroadcasts(broadcasts);
+                });
     }
 
     public List<Broadcast> getActiveBroadcasts() {
-        return broadcastRepository.findByActive(true);
+        return broadcasts.stream()
+                .filter(Broadcast::isActive)
+                .collect(Collectors.toList());
     }
 
     public List<Broadcast> getTcpSentBroadcasts() {
-        return broadcastRepository.findByTcpSent(true);
+        return broadcasts.stream()
+                .filter(Broadcast::isTcpSent)
+                .collect(Collectors.toList());
     }
 
     // Message methods
-    public Message saveMessage(String messageName, String messageType, String parameters) {
+    public Message saveMessage(String messageName, String messageType, String parameters, boolean saveMessage, boolean sendMessage) {
         Message message = new Message(messageName, messageType, parameters);
-        Message savedMessage = messageRepository.save(message);
+        if (message.getId() == null) {
+            message.setId(UUID.randomUUID().toString());
+        }
+        
+        // Set the saved and sent flags based on parameters
+        message.setSaved(saveMessage);
+        message.setSent(sendMessage);
+        
+        // Handle broadcast updates for specific message types
+        if (sendMessage && "yayinYonGuncelle".equals(messageType)) {
+            updateBroadcastDirection(parameters);
+        } else if (sendMessage && "yayinGenlikGuncelle".equals(messageType)) {
+            updateBroadcastAmplitude(parameters);
+        }
+        
+        // Always add to storage
+        messages.add(message);
+        xmlStorageService.saveMessages(messages);
         
         // Log the activity
         Map<String, Object> messageData = new HashMap<>();
-        messageData.put("messageName", messageName);
-        messageData.put("messageType", messageType);
-        messageData.put("parameters", parameters);
-        messageData.put("saved", savedMessage.isSaved());
-        messageData.put("sent", savedMessage.isSent());
-        
-        logActivity("CREATE", "MESSAGE", savedMessage.getId(), messageType + " mesajı oluşturuldu", messageData);
-        
-        return savedMessage;
-    }
-    
-    public Message updateMessage(Message message) {
-        Message updatedMessage = messageRepository.save(message);
-        
-        // Log the activity
-        Map<String, Object> messageData = new HashMap<>();
+        messageData.put("id", message.getId());
         messageData.put("messageName", message.getMessageName());
         messageData.put("messageType", message.getMessageType());
         messageData.put("parameters", message.getParameters());
         messageData.put("saved", message.isSaved());
         messageData.put("sent", message.isSent());
         
-        logActivity("UPDATE", "MESSAGE", message.getId(), message.getMessageType() + " mesajı güncellendi", messageData);
+        ActivityLog log = new ActivityLog();
+        log.setId(UUID.randomUUID().toString());
+        log.setAction("CREATE");
+        log.setEntityType("MESSAGE");
+        log.setEntityId(message.getId());
+        log.setDescription((messageType != null ? messageType : "null") + " mesajı oluşturuldu");
+        log.setEntityData(messageData);
+        log.setTimestamp(LocalDateTime.now());
         
-        return updatedMessage;
+        activityLogs.add(log);
+        xmlStorageService.saveActivityLogs(activityLogs);
+        
+        return message;
+    }
+
+    private void updateBroadcastDirection(String parameters) {
+        try {
+            Map<String, Object> params = JsonMapConverter.parseJsonString(parameters);
+            String yayinId = String.valueOf(params.get("yayinId"));
+            Object newDirectionObj = params.get("newDirection");
+            
+            if (yayinId != null && newDirectionObj != null) {
+                BigDecimal newDirection = new BigDecimal(String.valueOf(newDirectionObj));
+                
+                // Find and update the broadcast
+                for (Broadcast broadcast : broadcasts) {
+                    if (yayinId.equals(broadcast.getId())) {
+                        broadcast.setDirection(newDirection);
+                        xmlStorageService.saveBroadcasts(broadcasts);
+                        
+                        // Create entity data map
+                        Map<String, Object> entityData = new HashMap<>();
+                        entityData.put("id", broadcast.getId());
+                        entityData.put("name", broadcast.getName());
+                        entityData.put("direction", broadcast.getDirection());
+                        entityData.put("amplitude", broadcast.getAmplitude());
+                        
+                        // Log the update
+                        ActivityLog log = new ActivityLog();
+                        log.setId(UUID.randomUUID().toString());
+                        log.setAction("UPDATE");
+                        log.setEntityType("BROADCAST");
+                        log.setEntityId(broadcast.getId());
+                        log.setDescription("Yayın yönü güncellendi: " + newDirection + "°");
+                        log.setEntityData(entityData);
+                        log.setTimestamp(LocalDateTime.now());
+                        
+                        activityLogs.add(log);
+                        xmlStorageService.saveActivityLogs(activityLogs);
+                        break;
+                    }
+                }
+            }
+        } catch (Exception e) {
+            System.err.println("Error updating broadcast direction: " + e.getMessage());
+        }
+    }
+
+    private void updateBroadcastAmplitude(String parameters) {
+        try {
+            Map<String, Object> params = JsonMapConverter.parseJsonString(parameters);
+            String yayinId = String.valueOf(params.get("yayinId"));
+            Object newAmplitudeObj = params.get("newAmplitude");
+            
+            if (yayinId != null && newAmplitudeObj != null) {
+                BigDecimal newAmplitude = new BigDecimal(String.valueOf(newAmplitudeObj));
+                
+                // Find and update the broadcast
+                for (Broadcast broadcast : broadcasts) {
+                    if (yayinId.equals(broadcast.getId())) {
+                        broadcast.setAmplitude(newAmplitude);
+                        xmlStorageService.saveBroadcasts(broadcasts);
+                        
+                        // Create entity data map
+                        Map<String, Object> entityData = new HashMap<>();
+                        entityData.put("id", broadcast.getId());
+                        entityData.put("name", broadcast.getName());
+                        entityData.put("direction", broadcast.getDirection());
+                        entityData.put("amplitude", broadcast.getAmplitude());
+                        
+                        // Log the update
+                        ActivityLog log = new ActivityLog();
+                        log.setId(UUID.randomUUID().toString());
+                        log.setAction("UPDATE");
+                        log.setEntityType("BROADCAST");
+                        log.setEntityId(broadcast.getId());
+                        log.setDescription("Yayın genliği güncellendi: " + newAmplitude);
+                        log.setEntityData(entityData);
+                        log.setTimestamp(LocalDateTime.now());
+                        
+                        activityLogs.add(log);
+                        xmlStorageService.saveActivityLogs(activityLogs);
+                        break;
+                    }
+                }
+            }
+        } catch (Exception e) {
+            System.err.println("Error updating broadcast amplitude: " + e.getMessage());
+        }
+    }
+    
+    public Message updateMessage(Message updatedMessage) {
+        for (int i = 0; i < messages.size(); i++) {
+            if (messages.get(i).getId().equals(updatedMessage.getId())) {
+                messages.set(i, updatedMessage);
+                xmlStorageService.saveMessages(messages);
+                return updatedMessage;
+            }
+        }
+        return null;
+    }
+
+    public Message getMessageById(String id) {
+        return messages.stream()
+                .filter(msg -> msg.getId().equals(id))
+                .findFirst()
+                .orElse(null);
+    }
+
+    public boolean deleteMessage(String id) {
+        boolean removed = messages.removeIf(msg -> msg.getId().equals(id));
+        if (removed) {
+            xmlStorageService.saveMessages(messages);
+        }
+        return removed;
     }
     
     public List<Message> getAllMessages() {
-        // Tüm mesajları getir (kaydedilmiş veya sadece gönderilmiş)
-        return messageRepository.findAll();
+        return new ArrayList<>(messages);
     }
     
     public List<Message> getMessagesByType(String messageType) {
-        return messageRepository.findByMessageType(messageType);
-    }
-    
-    public void deleteMessage(String id) {
-        // Get message before deletion for logging
-        messageRepository.findById(id).ifPresent(message -> {
-            Map<String, Object> messageData = new HashMap<>();
-            messageData.put("messageName", message.getMessageName());
-            messageData.put("messageType", message.getMessageType());
-            messageData.put("parameters", message.getParameters());
-            messageData.put("saved", message.isSaved());
-            messageData.put("sent", message.isSent());
-            
-            logActivity("DELETE", "MESSAGE", id, message.getMessageType() + " mesajı silindi", messageData);
-        });
-        
-        messageRepository.deleteById(id);
+        return messages.stream()
+                .filter(m -> m.getMessageType().equals(messageType))
+                .collect(Collectors.toList());
     }
     
     public String convertMapToJson(Map<String, Object> map) {
